k8s/frontend-next-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-next
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-next
  template:
    metadata:
      labels:
        app: frontend-next
    spec:
      containers:
      - name: frontend-next
        image: frontend-next:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-next-service
spec:
  selector:
    app: frontend-next
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
